# AeroJet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SuperJet.cpp
.github/workflows/: c-cpp.yml  run-tests.yml
Source/AeroJet/: CMakeLists.txt
Source/AeroJet/include/: AeroJet.hpp  Assertion.hpp  MoveTemp.hpp  Types.hpp
Source/AeroJet/include/Exceptions/: FileNotFoundException.hpp  IncorrectAttributeTypeException.hpp  OperationNotSupportedException.hpp  RuntimeException.hpp
Source/AeroJet/include/Formatters/: Formatters.hpp
Source/AeroJet/include/Formatters/ClassInfo/: AccessFlags.hpp
Source/AeroJet/include/Formatters/FieldInfo/: AccessFlags.hpp
Source/AeroJet/include/Java/Archive/: Jar.hpp
Source/AeroJet/include/Java/ByteCode/: Instruction.hpp  OpCodes.hpp
Source/AeroJet/include/Java/ClassFile/: ClassInfo.hpp  ConstantPool.hpp  ConstantPoolEntry.hpp  FieldDescriptor.hpp  FieldInfo.hpp  MethodDescriptor.hpp  MethodInfo.hpp
Source/AeroJet/include/Java/ClassFile/Attributes/: AnnotationDefault.hpp  Attribute.hpp  AttributeInfo.hpp  BootstrapMethods.hpp  Code.hpp  ConstantValue.hpp  Deprecated.hpp  EnclosingMethod.hpp  Exceptions.hpp  InnerClasses.hpp  LineNumberTable.hpp  LocalVariableTable.hpp  LocalVariableTypeTable.hpp  MethodParameters.hpp  RuntimeInvisibleAnnotations.hpp  RuntimeInvisibleParameterAnnotations.hpp  RuntimeInvisibleTypeAnnotations.hpp  RuntimeVisibleAnnotations.hpp  RuntimeVisibleParameterAnnotations.hpp  RuntimeVisibleTypeAnnotations.hpp  Signature.hpp  SourceDebugExtension.hpp  SourceFile.hpp  StackMapTable.hpp  Synthetic.hpp
Source/AeroJet/include/Java/ClassFile/Attributes/Annotation/: Annotation.hpp  ElementValue.hpp  ElementValuePair.hpp  ParameterAnnotation.hpp  TypeAnnotation.hpp
Source/AeroJet/include/Java/ClassFile/Utils/: AttributeInfoUtils.hpp  ClassInfoUtils.hpp  ConstantPoolEntryUtils.hpp
Source/AeroJet/include/Math/: InclusiveRange.hpp
Source/AeroJet/include/Stream/: JavaClassStream.hpp  Reader.hpp  StandardStreamWrapper.hpp  Stream.hpp  StreamUtils.hpp  Writer.hpp
Source/AeroJet/include/Utils/: StringUtils.hpp
Source/AeroJet/source/Exceptions/: FileNotFoundException.cpp  IncorrectAttributeTypeException.cpp  OperationNotSupportedException.cpp  RuntimeException.cpp
Source/AeroJet/source/Java/Archive/: Jar.cpp
Source/AeroJet/source/Java/ByteCode/: Instruction.cpp
Source/AeroJet/source/Java/ClassFile/: ClassInfo.cpp  ConstantPool.cpp  ConstantPoolEntry.cpp  FieldDescriptor.cpp  FieldInfo.cpp  MethodDescriptor.cpp  MethodInfo.cpp
Source/AeroJet/source/Java/ClassFile/Attributes/: AnnotationDefault.cpp  Attribute.cpp  AttributeInfo.cpp  BootstrapMethods.cpp  Code.cpp  ConstantValue.cpp  Deprecated.cpp  EnclosingMethod.cpp  Exceptions.cpp  InnerClasses.cpp  LineNumberTable.cpp  LocalVariableTable.cpp  LocalVariableTypeTable.cpp  MethodParameters.cpp  RuntimeInvisibleAnnotations.cpp  RuntimeInvisibleParameterAnnotations.cpp  RuntimeInvisibleTyperAnnotations.cpp  RuntimeVisibleAnnotations.cpp  RuntimeVisibleParameterAnnotations.cpp  RuntimeVisibleTypeAnnotations.cpp  Signature.cpp  SourceDebugExtension.cpp  SourceFile.cpp  StackMapTable.cpp  Synthetic.cpp
Source/AeroJet/source/Java/ClassFile/Attributes/Annotation/: Annotation.cpp  ElementValue.cpp  ElementValuePair.cpp  ParameterAnnotation.cpp  TypeAnnotation.cpp
Source/AeroJet/source/Java/ClassFile/Utils/: AttributeInfoUtils.cpp  ClassInfoUtils.cpp  ConstantPoolEntryUtils.cpp
Source/AeroJet/source/Stream/: Reader.cpp  StreamUtils.cpp
Source/AeroJetClassTree/: CMakeLists.txt
Source/AeroJetClassTree/include/: ClassInfoNode.hpp  ConstantPoolEntryNode.hpp  ConstantPoolNode.hpp  IndexedNode.hpp  Node.hpp
Source/AeroJetClassTree/source/: ClassInfoNode.cpp  ConstantPoolEntryNode.cpp  ConstantPoolNode.cpp  IndexedNode.cpp  Node.cpp
Source/AeroJetCompiler/: CMakeLists.txt  main.cpp
Source/AeroJetCompiler/include/: Assert.hpp  ClassPath.hpp  ClassRegistry.hpp  Environment.hpp  ErrorCodes.hpp
Source/AeroJetCompiler/include/CodeGen/LLVM/: IRCodeGen.hpp  TranslationUnit.hpp
Source/AeroJetCompiler/include/Exceptions/: CompilerException.hpp  InvalidArgumentsException.hpp
Source/AeroJetCompiler/source/: ClassPath.cpp  ClassRegistry.cpp  Environment.cpp
Source/AeroJetCompiler/source/CodeGen/LLVM/: IRCodeGen.cpp  TranslationUnit.cpp
Source/AeroJetCompiler/source/Exceptions/: CompilerException.cpp  InvalidArgumentsException.cpp
Source/Examples/: CMakeLists.txt  SimpleClassPrinter.cpp
Source/JVM/: CMakeLists.txt  main.cpp
Source/JVM/include/: JavaVirtualMachine.hpp
Source/Tests/: CMakeLists.txt
Source/Tests/AeroJet/: CMakeLists.txt
Source/Tests/AeroJet/ClassFile/: CMakeLists.txt  ClassInfo.cpp  ExceptionsAttribute.cpp  InnerClassesAttributeTest.cpp  RuntimeVisibleAnnotationsTest.cpp
Source/Tests/AeroJet/Stream/: CMakeLists.txt  Reader.cpp  Reader_Test.cpp  StandardStreamWrapper.cpp  StreamUtils.cpp  Writer.cpp
Source/include/: SuperJet.h
Source/include/Compiler/: AttributeInfoResolver.h  ClassInfoRerenceCollector.h  ClassInfoResolver.h  Compiler.h  Context.h  Environment.h  FieldInfoResolver.h  MethodInfoResolver.h  Printer.h  Resolver.h  SourceDependencyGraph.h
Source/include/Compiler/CodeGen/: CodeGenerator.h  Node.h
Source/include/Compiler/Exceptions/: FileNotFoundException.h  IncorrectAttributeTypeException.h  IncorrectDataSizeException.h  NotSupportedException.h  OperationNotSupportedException.h  RuntimeException.h  UnknownConstantPoolTagException.h
Source/include/Compiler/Type/: Traits.h
Source/include/Java/: Types.h
Source/include/Java/Archive/: AccessFlags.h  Archive.h  AttributeInfo.h  Class.h  ClassInfo.h  ConstantPool.h  ConstantPoolEntry.h  FieldDescriptor.h  FieldInfo.h  Jar.h  MethodDescriptor.h  MethodInfo.h
Source/include/Utils/: StringUtils.h
Source/source/Compiler/: AttributeInfoResolver.cpp  ClassInfoReferenceCollector.cpp  ClassInfoResolver.cpp  Compiler.cpp  Context.cpp  FieldInfoResolver.cpp  MethodInfoResolver.cpp
Source/source/Java/Archive/: Archive.cpp  ClassInfo.cpp  Jar.cpp  (+2 more)
(+33 files in other folders)
